--- a/foundry.toml
+++ b/foundry.toml
@@ -2,5 +2,6 @@
 src = 'src'
 out = 'out'
 libs = ['lib']
+ETH_FROM = '0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266'
 
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
