--- a/foundry.toml
+++ b/foundry.toml
@@ -1,5 +1,5 @@
 [profile.default]
-src = 'src'
+src = 'contracts'
 out = 'out'
 libs = ['lib']
 ETH_FROM = '0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266'
